2011-09-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSImageCell.m (-drawInteriorWithFrame:inView:): Simplify a bit
	bit by using
	-[NSImage drawInRect:fromRect:operation:fraction:respectFlipped:hints:]
	* Source/NSCell.m (-drawInteriorWithFrame:inView:): Switch from
	-[NSImage compositeToPoint...] to
	-[NSImage drawInRect:fromRect:operation:fraction:respectFlipped:hints:]

2011-09-07  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSOpenPanel.m: Use the NSSavePanel _allowedFileTypes ivar
	in place of the _fileTypes ivar. Replace calls to _setupForTypes: with
	-setAllowedFileTypes:.
	* Headers/AppKit/NSOpenPanel.h: Remove now unused _fileTypes ivar
	* Source/NSSavePanel.m: Treat directories whose names have extensions
	in the _allowedFileTypes array as file packages.
	Previously, we only relied on -[NSWorkspace isFilePackageAtPath:],
	to determine if a director is a file package, which only considers the
	info.plists of installed applications.

2011-09-06  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSView.m (_setNeedsDisplayInRect_real:): Enlarge
	(if necessary) _invalidRect so it lies on integral device pixels.

2011-08-31 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-setApplicationIconImage): Ignore this
	call when the image is nil.

2011-08-29  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSCachedImageRep.m: Restore the implementation of -draw
	because libart/xlib need it.

2011-08-28 Christopher Armstrong <carmstrong@fastmail.com.au>
	* Source/GSHorizontalTypesetter.m: Split declaration of struct
	GSHorizontalTypesetter_glyph_cache_s and struct
	GSHorizontalTypesetter_line_frag_s from their typedefs to compile
	under clang.

2011-08-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSImage.m ( _loadFromFile): Correct last commit.
	* Source/NSImage.m ( _loadFromData): Use similar check here.

2011-08-25 Riccardo Mottola <rm@gnu.org>

	* Source/NSImage.m ( _loadFromFile):